--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,8 @@ build-iPhoneSimulator/
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 
 # End of https://www.gitignore.io/api/ruby,rails,emacs,macos
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
