--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "sim-checker",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.5"
+    "@rails/webpacker": "3.5",
+    "axios": "^0.18.0",
+    "rails-ujs": "^5.2.2"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
